2009-07-23  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/modules/manage_network_components_form.php: add comments for
	clarify mecanics of code, and add default group when choose make new
	WMI.
	* godmode/modules/manage_network_components_form_wmi.php: fix the bug,
	change files to add the html table, it was a probably typing mistake.
	Fixes: 2808211

2009-07-22  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/tactical.php: fix bug, and now show another column
	with the type of server.
	Fixes: 2825426

2009-07-22  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/modules/manage_network_templates_form.php: fix bug that the column
	group had incorrect content.
	Fixes: 2815118

2009-07-22  Miguel de Dios  <miguel.dedios@artica.es>

	* general/header.php, images/lupa_15x15.png, include/functions_html.php
	include/styles/pandora.css, operation/search_results.php: add global
	search bar in the header for searching Agents, Maps, Reports, Graphs,
	Alerts and Users...if you user have access level...

2009-07-20  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/tactical.php, operation/agentes/status_monitor.php: add
	link to list monitors "not init".
	Fixes: 2815098

2009-07-20  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: fix bad merge with local installation.
	
2009-07-20  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: fix bug the any number of modules in
	unknown status for any agent paint with its colour in the list of
	agents. Now for the agent has a box colour with color for unknown, it must
	has all modules in unknown status.
	Fixes: 2805029

2009-07-17  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/status_monitor.php: fix bug default group in form.

2009-07-17  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/modificar_agente.php: fix bug that appear two times the
	group "All".
	Fixes: #2822999
